1. Метод .of [#70623 #261912]