@@ -4,7 +4,6 @@ import org.junit.Test;
 
 import java.util.*;
 
-
 import static org.junit.Assert.*;
 import static org.hamcrest.core.Is.is;
 
@@ -12,23 +11,23 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1", "k2/sk1");
-        List<String> expected = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1");
+        List<String> input = List.of("k1/sk1", "k2/sk1");
+        List<String> expected = List.of("k1", "k1/sk1", "k2", "k2/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenSortAscWithoutMissedDepartments() {
-        List<String> input = Arrays.asList(
+        List<String> input = new ArrayList<>(List.of(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -38,8 +37,8 @@ public class DepartmentsTest {
                 "K1",
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
-        );
-        List<String> expect = Arrays.asList(
+        ));
+        List<String> expect = new ArrayList<>(List.of(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -49,36 +48,36 @@ public class DepartmentsTest {
                 "K2/SK1",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2"
-        );
+        ));
         Departments.sortAsc(input);
         assertThat(input, is(expect));
     }
 
     @Test
     public void whenSortAscWithMissedDepartments() {
-        List<String> input = Arrays.asList(
+        List<String> input = new ArrayList<>(List.of(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K2/SK1",
                 "K1/SK2",
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
-        );
-        List<String> expect = Arrays.asList(
+        ));
+        List<String> expect = new ArrayList<>(List.of(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K1/SK2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2"
-        );
+        ));
         Departments.sortAsc(input);
         assertThat(input, is(expect));
     }
 
     @Test
     public void whenSortDescWithoutMissedDepartments() {
-        List<String> input = Arrays.asList(
+        List<String> input = new ArrayList<>(List.of(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -88,8 +87,8 @@ public class DepartmentsTest {
                 "K1",
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
-        );
-        List<String> expect = Arrays.asList(
+        ));
+        List<String> expect = new ArrayList<>(List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
@@ -99,14 +98,14 @@ public class DepartmentsTest {
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K1/SK2"
-        );
+        ));
         Departments.sortDesc(input);
         assertThat(input, is(expect));
     }
 
     @Test
     public void whenSortDescWithMissedDepartments() {
-        List<String> input = Arrays.asList(
+        List<String> input = new ArrayList<>(List.of(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -114,8 +113,8 @@ public class DepartmentsTest {
                 "K1/SK2",
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
-        );
-        List<String> expect = Arrays.asList(
+        ));
+        List<String> expect = new ArrayList<>(List.of(
                 "K2/SK1",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2",
@@ -123,7 +122,7 @@ public class DepartmentsTest {
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K1/SK2"
-        );
+        ));
         Departments.sortDesc(input);
         assertThat(input, is(expect));
     }
